--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <body>
 <div class="wrapper">
     <div class="block">
+        <div class="block14">
+            <p>wird gearbeitet</p>
+        </div>
         <div class="block1">
+
             <div class="block11">
                 <div class="titName">
                     <h1>MAIIA PUSHKAROVA</h1>
@@ -44,6 +48,7 @@
         <div class="block13">
             <img src="img/Profilbild.png" alt="Maiia Pushkarova">
         </div>
+
     </div>
     <div class="block">
         <div class="column1">
@@ -89,6 +94,78 @@
                     <li>Englisch - Grundkenntnisse</li>
                     <li>Deutsch - B1</li>
                 </ul>
+
+                <ul>
+                    <h3>Softwarekenntnisse</h3>
+                    <li>-</li>
+                    <li>-</li>
+                    <li>-</li>
+                    <li>-</li>
+                    <li>-</li>
+                    <li>-</li>
+                    <li>-</li>
+                    <li>-</li>
+                </ul>
+
+
+            </div>
+        </div>
+        <div class="column2">
+            <div class="section">
+                <h1> MAIIA PUSHKAROVA </h1>
+                <h2>BERUFSERFARUNG</h2>
+                <dl>
+                    <h3>Verkaufsleiterin</h3>
+                    <dt>
+                        Eigenes Geschäft selbstständig, 11/2017-02/2022
+                    </dt>
+                    <dd>-</dd>
+                    <dd>-</dd>
+                    <dd>-</dd>
+                </dl>
+                <dl>
+                    <h3>Verkaufsleiterin</h3>
+                    <dt>"Royal Canin", 07/2015-10/2017</dt>
+                    <dd>-</dd>
+                    <dd>-</dd>
+                    <dd>-</dd>
+                </dl>
+
+                <dl>
+                    <h3>Aussendienstmitarbeiter</h3>
+                    <dt>Einzelhandel mit Tiefkühlkost "Muschketer", 10/2008-10/2014
+                    </dt>
+                    <dd> -</dd>
+                    <dd>-</dd>
+                    <dd>-</dd>
+                </dl>
+                <dl>
+                    <h3>PC-Operator</h3>
+                    <dt>Einzelhandel mit Tiefkühlkost, 09/2006-09/2008
+                    </dt>
+                    <dd> -</dd>
+                    <dd>-</dd>
+                    <dd>-</dd>
+                </dl>
+                <dl>
+                    <h3>Croupierin</h3>
+                    <dt>Casino "Volna" Donetsk, 10/2000-05/2006
+                    </dt>
+                    <dd>-</dd>
+                    <dd> -</dd>
+                    <dd>-</dd>
+                    <dd>-</dd>
+                    <dd></dd>
+                </dl>
+            </div>
+
+        </div>
+
+    </div>
+    <div class="block">
+        <div class="column1">
+            <div class="section">
+
                 <ul>
                     <h3>Fertigkeiten</h3>
                     <li>Java Spring Boot, Thymeleaf,</li>
@@ -103,36 +180,21 @@
                     <li></li>
                     <li></li>
                 </ul>
-
+                </div>
+            <div class="section">
+                <h2>INTERESSEN</h2>
+                <ul>
+                <h3>Hobbies</h3>
+                <li>-</li>
+                <li>-</li>
+                <li>-</li>
+                </ul>
+                <ul>
+                    <h3></h3>
+                </ul>
             </div>
         </div>
         <div class="column2">
-            <div class="section">
-                <h1> MAIIA PUSHKAROVA </h1>
-                <h2>BERUFSERFARUNG</h2>
-                <dl>
-                    <dt>
-                        11/2017-02/2022
-                    </dt>
-                    <dd>Eigenes Geschäft selbstständig</dd>
-                    <dd> Verkaufsleiterin</dd>
-                    <dt>07/2015-10/2017</dt>
-                    <dd>"Royal Canin"</dd>
-                    <dd> Verkaufsleiterin
-                    </dd>
-                    <dt>10/2008-10/2014
-                    </dt>
-                    <dd> Einzelhandel mit Tiefkühlkost</dd>
-                    <dd> Aussendienstmitarbeiter
-                    </dd>
-                    <dt>09/2006-09/2008
-                    </dt>
-                    <dd>Einzelhandel mit Tiefkühlkost PC-Operator</dd>
-                    <dt>10/2000-05/2006
-                    </dt>
-                    <dd>Casino Donetsk Croupierin</dd>
-                </dl>
-            </div>
             <div class="section">
                 <h2>BILDUNGSWEG</h2>
                 <dl>
@@ -154,18 +216,9 @@
             </div>
 
         </div>
-
     </div>
     <div class="block">
-        <div class="column1">
-            <div class="section">
-                <h3>Hobbys</h3>
-                <li></li>
-                <li></li>
-                <li></li>
-            </div>
-        </div>
-        <div class="column2"></div>
+        <img class="imgDoc" src="img/Sds.png">
     </div>
 
 </div>
