--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="wilih=device-wilih, initial-scale=1.0">
 
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="maketMyStyles.css">
@@ -14,7 +14,8 @@
 <div class="wrapper">
     <div class="block">
         <div class="block14">
-            <p>wird gearbeitet</p>
+            <p>wird</p>
+            <p>gearbeitet</p>
         </div>
         <div class="block1">
 
@@ -114,49 +115,52 @@
             <div class="section">
                 <h1> MAIIA PUSHKAROVA </h1>
                 <h2>BERUFSERFARUNG</h2>
-                <dl>
+                <ul>
                     <h3>Verkaufsleiterin</h3>
-                    <dt>
+                    <h4>
                         Eigenes Geschäft selbstständig, 11/2017-02/2022
-                    </dt>
-                    <dd>-</dd>
-                    <dd>-</dd>
-                    <dd>-</dd>
-                </dl>
-                <dl>
+                    </h4>
+                    <li>Pflege der Berichtsdokumentation</li>
+                    <li>Verfolgung von Debitorenkonten</li>
+                    <li>Sammeln von Bestellungen
+                        und Organisieren der Warenlieferung an Agenten
+                    </li>
+                </ul>
+                <ul>
                     <h3>Verkaufsleiterin</h3>
-                    <dt>"Royal Canin", 07/2015-10/2017</dt>
-                    <dd>-</dd>
-                    <dd>-</dd>
-                    <dd>-</dd>
-                </dl>
+                    <h4>"Royal Canin", 07/2015-10/2017</h4>
+                    <li>Entwicklung optimaler Präsentations- und Warenbestände im Einzelhandel</li>
+                    <li>Verfolgung von Debitorenkonten</li>
+                    <li>Pflege der Berichtsdokumentation</li>
+                    <li>Verhandeln</li>
+                </ul>
 
-                <dl>
+                <ul>
                     <h3>Aussendienstmitarbeiter</h3>
-                    <dt>Einzelhandel mit Tiefkühlkost "Muschketer", 10/2008-10/2014
-                    </dt>
-                    <dd> -</dd>
-                    <dd>-</dd>
-                    <dd>-</dd>
-                </dl>
-                <dl>
+                    <h4>Einzelhandel mit Tiefkühlkost "Muschketer", 10/2008-10/2014
+                    </h4>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+                <ul>
                     <h3>PC-Operator</h3>
-                    <dt>Einzelhandel mit Tiefkühlkost, 09/2006-09/2008
-                    </dt>
-                    <dd> -</dd>
-                    <dd>-</dd>
-                    <dd>-</dd>
-                </dl>
-                <dl>
+                    <li>Einzelhandel mit Tiefkühlkost, 09/2006-09/2008
+                    </li>
+                    <li> -</li>
+                    <li>-</li>
+                    <li>-</li>
+                </ul>
+                <ul>
                     <h3>Croupierin</h3>
-                    <dt>Casino "Volna" Donetsk, 10/2000-05/2006
-                    </dt>
-                    <dd>-</dd>
-                    <dd> -</dd>
-                    <dd>-</dd>
-                    <dd>-</dd>
-                    <dd></dd>
-                </dl>
+                    <li>Casino "Volna" Donetsk, 10/2000-05/2006
+                    </li>
+                    <li>-</li>
+                    <li> -</li>
+                    <li>-</li>
+                    <li>-</li>
+                    <li></li>
+                </ul>
             </div>
 
         </div>
@@ -180,14 +184,14 @@
                     <li></li>
                     <li></li>
                 </ul>
-                </div>
+            </div>
             <div class="section">
                 <h2>INTERESSEN</h2>
                 <ul>
-                <h3>Hobbies</h3>
-                <li>-</li>
-                <li>-</li>
-                <li>-</li>
+                    <h3>Hobbies</h3>
+                    <li>-</li>
+                    <li>-</li>
+                    <li>-</li>
                 </ul>
                 <ul>
                     <h3></h3>
@@ -197,21 +201,25 @@
         <div class="column2">
             <div class="section">
                 <h2>BILDUNGSWEG</h2>
+
                 <dl>
-                    <dt>11/2018 - 05/2022
-                    </dt>
-                    <dd> Computerakademie "ItStep" Ukraine</dd>
-                    <dd> Full-Stack-Entwickler</dd>
-                    <dt>09/2000 - 06/2006
-                    </dt>
-                    <dd>Nationale Universität Donetsk Ukraine</dd>
+                    <dt>Nationale Universität Ukraine, 09/2000 - 06/2006</dt>
                     <dd>Studiengang Mathematik</dd>
-                    <dd> Mathematik- und Informatiklehrerin
-                    </dd>
-                    <dt>09/1997 - 07/1999</dt>
-                    <dd>Oberschule , Donetsk Ukraine</dd>
-                    <dt>09/1989 - 06/1997</dt>
-                    <dd>Basisschule, Donetsk Ukraine</dd>
+                    <dd>Mathematik- und Informatiklehrerin</dd>
+                </dl>
+                <dl>
+                    <dt>Oberschule , Donetsk Ukraine, 09/1997 - 07/1999</dt>
+                    <dd></dd>
+                </dl>
+                <dl>
+                    <dt>Basisschule, Donetsk Ukraine, 09/1989 - 06/1997</dt>
+                    <dd></dd>
+                </dl>
+
+                <h2>WEITERBILDUNG</h2>
+                <dl>
+                    <dt>Computerakademie "ItStep" Ukraine, 11/2018 - 05/2022</dt>
+                    <dd>Full-Stack-Entwickler</dd>
                 </dl>
             </div>
 
