--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="block11">
                 <div class="titName">
                     <h1>MAIIA PUSHKAROVA</h1>
-                    <h1>Entwickler</h1>
+                    <h1>Junior-Entwickler</h1>
                 </div>
             </div>
             <div class="block12">
@@ -77,7 +77,7 @@
                     </a>
                     <a target="_blank" href="https://github.com/yosha28">
                         <img src="img/icon-whatsapp.png">
-                        <span>+4179-520-83-85</span>
+                        <span>+4179 520 83 85</span>
                     </a>
                     <!--                    <a target="_blank" href="https://github.com/yosha28">-->
                     <!--                        <img src="img/icon-gmail.png">-->
@@ -87,7 +87,6 @@
             </div>
             <div class="section">
                 <h2>KENNTNISSE</h2>
-
                 <ul>
                     <h3>Sprachekenntnisse</h3>
                     <li>Russisch - Muttersprache</li>
@@ -97,15 +96,23 @@
                 </ul>
 
                 <ul>
-                    <h3>Softwarekenntnisse</h3>
-                    <li>-</li>
-                    <li>-</li>
-                    <li>-</li>
-                    <li>-</li>
-                    <li>-</li>
-                    <li>-</li>
-                    <li>-</li>
-                    <li>-</li>
+                    <h3>Technische Fähigkeiten</h3>
+                    <li>Webentwicklung</li>
+                    <li>Android App-Entwicklung</li>
+                    <li>Datenbanken</li>
+                    <li>Testen und Debugging</li>
+                </ul>
+                <ul>
+                    <h3>Programmiersprachen</h3>
+                    <li>C++</li>
+                    <li>C</li>
+                    <li>C#</li>
+                    <li>Java</li>
+                    <h3></h3>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                 </ul>
 
 
@@ -147,18 +154,18 @@
                     <h3>PC-Operator</h3>
                     <li>Einzelhandel mit Tiefkühlkost, 09/2006-09/2008
                     </li>
-                    <li> -</li>
-                    <li>-</li>
-                    <li>-</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                 </ul>
                 <ul>
                     <h3>Croupierin</h3>
                     <li>Casino "Volna" Donetsk, 10/2000-05/2006
                     </li>
-                    <li>-</li>
-                    <li> -</li>
-                    <li>-</li>
-                    <li>-</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                     <li></li>
                 </ul>
             </div>
@@ -169,11 +176,13 @@
     <div class="block">
         <div class="column1">
             <div class="section">
-
                 <ul>
                     <h3>Fertigkeiten</h3>
-                    <li>Java Spring Boot, Thymeleaf,</li>
-                    <li>C#</li>
+                    <li></li>
+                    <li>Spring Boot</li>
+                    <li>Thymeleaf</li>
+                    <li></li>
+                    <li></li>
                     <li>HTML</li>
                     <li>SQL</li>
                     <li>Objektorientiert</li>
@@ -184,14 +193,22 @@
                     <li></li>
                     <li></li>
                 </ul>
-            </div>
-            <div class="section">
+                <h2>SOFT SKILLS</h2>
+                <ul>
+                    <li>Lernbereitschaft</li>
+                    <li>Geduld und Durchhaltevermögen</li>
+                    <li>Teamarbeit</li>
+                    <li>Flexibilität</li>
+                    <li>Kritikfähigkeit</li>
+                    <li>Eigeninitiative</li>
+                    <li>Anpassungsfähigkeit</li>
+                </ul>
                 <h2>INTERESSEN</h2>
                 <ul>
-                    <h3>Hobbies</h3>
-                    <li>-</li>
-                    <li>-</li>
-                    <li>-</li>
+                    <li>Lesen</li>
+                    <li>Velofahren</li>
+                    <li>Vögel, insbesondere Papageien</li>
+                    <li>Sportaktivitäten</li>
                 </ul>
                 <ul>
                     <h3></h3>
@@ -223,6 +240,49 @@
                 </dl>
             </div>
 
+        </div>
+    </div>
+    <div class="block">
+        <div class="blockBew">
+            <div class="divBew2">
+
+                Name Firma
+                Herr / Frau
+                Vorname Nachname
+                Strasse
+                PLZ Ort
+
+                Luzern, 27. Mai 2024
+
+                Bewerbung als XY 100%
+
+                Sehr geehrter Herr /Frau XY
+
+
+                Durch Frau Egli, Fachspezialistin Integration von der Dienstelle Asyl- und Flüchtlingswesen bin ich auf
+                die Stellenausschreibung xy aufmerksam geworden.
+
+                Ich bin zusammen mit xy und xy am xy aus der Ukraine geflüchtet und habe dort über zehn Jahre als
+                xy gearbeitet. Leider ist es für mich aufgrund meiner Situation und meiner Sprachkenntnisse sehr
+                schwierig eine Stelle im Bereich meiner Ausbildung zu finden. Ich würde mich deshalb sehr freuen,
+                wenn ich in der xy erste Arbeitserfahrungen sammeln könnte, um so mein Können und Wissen unter
+                Beweis zu stellen. Ich möchte mir in der Schweiz ein neues Leben aufbauen und so schnell wie
+                möglich unabhängig von der Wirtschaftlichen Sozialhilfe sein.
+
+                Aktuell lasse ich alle meine Diplome übersetzen und anerkennen. Im Deutsch habe ich das Niveau B1
+                erfolgreich abgeschlossen und lege bald die Prüfung fürs B2 ab. Mein Ziel ist es, auch das C1
+                Sprachdiplom zu erwerben, um mich persönlich weiterzubilden und meine
+                Arbeitsintegrationschancen zu steigern.
+
+                Über eine Einladung zu einem persönlichen Vorstellungsgespräch freue ich mich.
+
+                Freundliche Grüsse
+
+
+                UNTERSCHRIFT
+                Vorname Nachname
+
+            </div>
         </div>
     </div>
     <div class="block">
