--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                             <li>Birkenweg 1</li>
                             <li>6142 Gettnau</li>
                             <li>+41 79 520 83 85</li>
-                            <li>maya2882@gmail.com</li>
+                            <li><a target="_blank" href=mailto:maya2882@gmail.com?subject=Subject+text&body=Body+text">
+                                <span style="font-size: 1.1rem;" class="">maya2882@gmail.com</span> </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -69,30 +71,37 @@
                 <div class="section">
                     <a href="https://www.linkedin.com/in/maiia-pushkarova-b87637207/">
                         <img src="img/icons8-linkedin.png">
-                        <span class="buttonLink">Maiia Pushkarova</span>
+                        <span>Maiia Pushkarova</span>
                     </a>
                     <a target="_blank" href="https://github.com/yosha28">
                         <img src="img/icons8-github.png">
-                        <span class="buttonLink">yosha28</span>
+                        <span>yosha28</span>
                     </a>
-                    <a target="_blank" href="https://github.com/yosha28">
+                    <a target="_blank" href="https://wa.me/41795208385">
                         <img src="img/icon-whatsapp.png">
                         <span>+4179 520 83 85</span>
                     </a>
-                    <!--                    <a target="_blank" href="https://github.com/yosha28">-->
-                    <!--                        <img src="img/icon-gmail.png">-->
-                    <!--                        <span>maya2882@gmail.com</span>-->
-                    <!--                    </a>-->
+                    <a target="_blank" href="mailto:maya2882@gmail.com?subject=Subject+text&body=Body+text">
+                        <img src="img/icon-gmail.png">
+                        <span>maya2882@gmail.com</span>
+                    </a>
                 </div>
             </div>
             <div class="section">
                 <h2>KENNTNISSE</h2>
                 <ul>
                     <h3>Sprachekenntnisse</h3>
+                    <!--                    <div style="white-space: pre; word-wrap: break-word;">-->
+                    <!--                        Russisch   - Muttersprache-->
+                    <!--                        Ukrainisch - Fliessend-->
+                    <!--                        Englisch   - Grundkenntnisse-->
+                    <!--                        Deutsch    - B1-->
+                    <!--                    </div>-->
                     <li>Russisch - Muttersprache</li>
                     <li>Ukrainisch - Fliessend</li>
                     <li>Englisch - Grundkenntnisse</li>
                     <li>Deutsch - B1</li>
+
                 </ul>
 
                 <ul>
@@ -104,10 +113,39 @@
                 </ul>
                 <ul>
                     <h3>Programmiersprachen</h3>
-                    <li>C++</li>
-                    <li>C</li>
-                    <li>C#</li>
-                    <li>Java</li>
+                    <li>
+                        <div class="skala">
+                            <div class="skala1">C</div>
+                            <div class="skala2">
+                                <div class="skala3" style="width:55%;background-color: #f8eaf3"></div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="skala">
+                            <div class="skala1">C++</div>
+                            <div class="skala2">
+                                <div class="skala3" style="width:50%;background-color: #f8eaf3"></div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="skala">
+                            <div class="skala1">C#</div>
+                            <div class="skala2">
+                                <div class="skala3" style="width:35%;background-color: #f8eaf3"></div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="skala">
+                            <div class="skala1">Java</div>
+                            <div class="skala2">
+                                <div class="skala3" style="width:10%;background-color: #f8eaf3"></div>
+                            </div>
+                        </div>
+                    </li>
+
                     <h3></h3>
                     <li></li>
                     <li></li>
@@ -128,7 +166,7 @@
                         Eigenes Geschäft selbstständig, 11/2017-02/2022
                     </h4>
                     <li>Pflege der Berichtsdokumentation</li>
-                    <li>Verfolgung von Debitorenkonten</li>
+                    <li>Einführung der Debitorenbuchhaltung</li>
                     <li>Sammeln von Bestellungen
                         und Organisieren der Warenlieferung an Agenten
                     </li>
@@ -137,7 +175,7 @@
                     <h3>Verkaufsleiterin</h3>
                     <h4>"Royal Canin", 07/2015-10/2017</h4>
                     <li>Entwicklung optimaler Präsentations- und Warenbestände im Einzelhandel</li>
-                    <li>Verfolgung von Debitorenkonten</li>
+                    <li>Einführung der Debitorenbuchhaltung</li>
                     <li>Pflege der Berichtsdokumentation</li>
                     <li>Verhandeln</li>
                 </ul>
@@ -147,20 +185,22 @@
                     <h4>Einzelhandel mit Tiefkühlkost "Muschketer", 10/2008-10/2014
                     </h4>
                     <li></li>
-                    <li></li>
+                    <li>Einführung der Debitorenbuchhaltung</li>
                     <li></li>
                 </ul>
                 <ul>
                     <h3>PC-Operator</h3>
-                    <li>Einzelhandel mit Tiefkühlkost, 09/2006-09/2008
+                    <h4>Einzelhandel mit Tiefkühlkost, 09/2006-09/2008</h4>
+                    <li>
                     </li>
                     <li></li>
-                    <li></li>
+                    <li>Einführung der Debitorenbuchhaltung</li>
                     <li></li>
                 </ul>
                 <ul>
                     <h3>Croupierin</h3>
-                    <li>Casino "Volna" Donetsk, 10/2000-05/2006
+                    <h4>Casino "Volna" Donetsk, 10/2000-05/2006</h4>
+                    <li>
                     </li>
                     <li></li>
                     <li></li>
@@ -188,7 +228,7 @@
                     <li>Objektorientiert</li>
                     <li>REST-APIs</li>
                     <li>Hibernate ORM</li>
-                    <li></li>
+                    <li>SCRUM</li>
                     <li></li>
                     <li></li>
                     <li></li>
