--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <img src="img/icon-whatsapp.png">
                         <span>+4179 520 83 85</span>
                     </a>
-                    <a target="_blank" href="mailto:maya2882@gmail.com?subject=Subject+text&body=Body+text">
+                    <a target="_blank" href="mailto:maya2882@gmail.com?">
                         <img src="img/icon-gmail.png">
                         <span>maya2882@gmail.com</span>
                     </a>
