--- a/index.html
+++ b/index.html
@@ -88,20 +88,23 @@
                 </div>
             </div>
             <div class="section">
-                <h2>KENNTNISSE</h2>
+                <h2 style="margin-top: -0.5rem;">KENNTNISSE</h2>
                 <ul>
                     <h3>Sprachekenntnisse</h3>
-                    <!--                    <div style="white-space: pre; word-wrap: break-word;">-->
-                    <!--                        Russisch   - Muttersprache-->
-                    <!--                        Ukrainisch - Fliessend-->
-                    <!--                        Englisch   - Grundkenntnisse-->
-                    <!--                        Deutsch    - B1-->
-                    <!--                    </div>-->
-                    <li>Russisch - Muttersprache</li>
-                    <li>Ukrainisch - Fliessend</li>
-                    <li>Englisch - Grundkenntnisse</li>
-                    <li>Deutsch - B1</li>
-
+                    <div class="sprache">
+                        <div class="sprache1">
+                            <li>Russisch</li>
+                            <li>Ukrainisch</li>
+                            <li>Englisch</li>
+                            <li>Deutsch</li>
+                        </div>
+                        <div class="sprache2">
+                            <li>- Muttersprache</li>
+                            <li>- Fliessend</li>
+                            <li>- Grundkenntnisse</li>
+                            <li>- B1</li>
+                        </div>
+                    </div>
                 </ul>
 
                 <ul>
@@ -112,7 +115,7 @@
                     <li>Testen und Debugging</li>
                 </ul>
                 <ul>
-                    <h3>Programmiersprachen</h3>
+                    <h3 style="margin-top: -0.5rem;margin-bottom: 0.3rem;">Programmiersprachen</h3>
                     <li>
                         <div class="skala">
                             <div class="skala1">C</div>
@@ -134,6 +137,14 @@
                             <div class="skala1">C#</div>
                             <div class="skala2">
                                 <div class="skala3" style="width:35%;background-color: #f8eaf3"></div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="skala">
+                            <div class="skala1">JavaScript</div>
+                            <div class="skala2">
+                                <div class="skala3" style="width:30%;background-color: #f8eaf3"></div>
                             </div>
                         </div>
                     </li>
