--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="wilih=device-wilih, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="maketMyStyles.css">
+    <link rel="shortcut icon" href="img/fon.png"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>Lebenslauf</title>
 
@@ -185,40 +186,33 @@
                 <ul>
                     <h3>Verkaufsleiterin</h3>
                     <h4>"Royal Canin", 07/2015-10/2017</h4>
-                    <li>Entwicklung optimaler Präsentations- und Warenbestände im Einzelhandel</li>
-                    <li>Einführung der Debitorenbuchhaltung</li>
-                    <li>Pflege der Berichtsdokumentation</li>
-                    <li>Verhandeln</li>
+                    <li>Entwicklung optimaler Warenpräsentation und Sortimentsgestaltung im Einzelhandel</li>
+                    <li>Einführung und Pflege der Debitorenbuchhaltung</li>
+                    <li>Erstellung von Berichten und Analyse von Verkaufszahlen</li>
+                    <li>Preisverhandlungen mit Lieferanten und Geschäftspartnern</li>
+                    <li>Schulung und Koordination des Verkaufspersonals</li>
                 </ul>
 
                 <ul>
                     <h3>Aussendienstmitarbeiter</h3>
-                    <h4>Einzelhandel mit Tiefkühlkost "Muschketer", 10/2008-10/2014
+                    <h4>Einzelhandel mit Tiefkühlkost , 10/2008-10/2014
                     </h4>
-                    <li></li>
-                    <li>Einführung der Debitorenbuchhaltung</li>
-                    <li></li>
+                    <li>Akquise und Betreuung von Neukunden</li>
+                    <li>Einführung und Pflege der Debitorenbuchhaltung</li>
+                    <li>Durchführung von Produktpräsentationen und Verkaufsaktionen</li>
+                    <li>Markt- und Wettbewerbsbeobachtung</li>
                 </ul>
                 <ul>
                     <h3>PC-Operator</h3>
                     <h4>Einzelhandel mit Tiefkühlkost, 09/2006-09/2008</h4>
-                    <li>
+                    <li>Datenverarbeitung und Pflege von Kundendatenbanken
                     </li>
-                    <li></li>
+                    <li>Erstellung von Rechnungen und Lieferscheinen</li>
                     <li>Einführung der Debitorenbuchhaltung</li>
-                    <li></li>
+                    <li>Unterstützung der Buchhaltung, insbesondere Debitorenbuchhaltung</li>
+                    <li>Technischer Support für Vertriebsmitarbeiter</li>
                 </ul>
-                <ul>
-                    <h3>Croupierin</h3>
-                    <h4>Casino "Volna" Donetsk, 10/2000-05/2006</h4>
-                    <li>
-                    </li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+
             </div>
 
         </div>
@@ -268,6 +262,18 @@
         </div>
         <div class="column2">
             <div class="section">
+                <ul>
+                    <h3>Croupierin</h3>
+                    <h4>Casino "Volna" Donetsk, 10/2000-05/2006</h4>
+                    <li>Einsatz an Roulette- und Kartenspieltischen unter hohem Druck
+                    </li>
+                    <li>Schulung und Betreuung von neuen Mitarbeitenden – verantwortlich für deren Handlungen am
+                        Spieltisch
+                    </li>
+                    <li>Präziser Umgang mit Geld und Chips, Einhaltung aller Spielregeln</li>
+                    <li>Hohe Konzentration, Verantwortungsbewusstsein und mathematisches Denken</li>
+                    <li>Multitasking und professioneller Kundenumgang in stressigen Situationen</li>
+                </ul>
                 <h2>BILDUNGSWEG</h2>
 
                 <dl>
@@ -276,7 +282,7 @@
                     <dd>Mathematik- und Informatiklehrerin</dd>
                 </dl>
                 <dl>
-                    <dt>Oberschule , Donetsk Ukraine, 09/1997 - 07/1999</dt>
+                    <dt>Oberschule, Donetsk Ukraine, 09/1997 - 07/1999</dt>
                     <dd></dd>
                 </dl>
                 <dl>
