--- a/index.html
+++ b/index.html
@@ -345,6 +345,9 @@
     <div class="block">
         <img class="imgDoc" src="img/Sds.png">
     </div>
+    <div class="block">
+        <img class="imgDoc" src="img/alemaniaB21.jpg">
+    </div>
 
 </div>
 <!--</div>-->
